  * dh_lintian: Source overrides doc improvement. Closes: #683941
  * Updated German man page translation. Closes: #685538
  * Updated French man page translation. Closes: #685560
  * dh_installmime: No longer makes maintainer scripts run update-mime and
    update-mime-database, that is now handled by triggers. Closes: #684689
    Thanks, Charles Plessy

 -- Joey Hess <joeyh@debian.org>  Thu, 05 Jul 2012 08:51:07 -0600

debhelper (9.20120608) unstable; urgency=low

  * dh: When there's an -indep override target without -arch, or vice versa,
    avoid acting on packages covered by the override target when running
    the command for packages not covered by it. Closes: #676462

 -- Joey Hess <joeyh@debian.org>  Fri, 08 Jun 2012 13:15:48 -0400

debhelper (9.20120528) unstable; urgency=low

  * dh_installcatalogs: Turn /etc/sgml/$package.cat into conffiles
    and introduce dependency on trigger-based sgml-base. Closes: #477751
    Thanks, Helmut Grohne

 -- Joey Hess <joeyh@debian.org>  Mon, 28 May 2012 13:40:26 -0400

debhelper (9.20120523) unstable; urgency=low

  * Spanish translation update. Closes: #673629 Thanks, Omar Campagne
  * Set Multi-Arch: foreign. Closes: #674193

 -- Joey Hess <joeyh@debian.org>  Wed, 23 May 2012 14:55:48 -0400

debhelper (9.20120518) unstable; urgency=low

  * Fix versioned dependency on dpkg for xz options. Closes: #672895
  * dh_link: Doc improvement. Closes: #672988

 -- Joey Hess <joeyh@debian.org>  Fri, 18 May 2012 11:05:03 -0400

debhelper (9.20120513) unstable; urgency=low

  * Improve -v logging. Closes: #672448
  * dh_builddeb: Build udebs with xz compression, level 1, extreme strategy.
    This has been chosen to not need any more memory or cpu when uncompressing,
    while yeilding the best compressions for udebs. Thanks, Philipp Kern.
  * Depend on a new enough dpkg for above features. Backporters will need
    to revert these changes.

 -- Joey Hess <joeyh@debian.org>  Sun, 13 May 2012 13:09:42 -0400
