@@ -8,6 +8,8 @@ debhelper (9.20120609) UNRELEASED; urgency=low
   * dh_installmime: No longer makes maintainer scripts run update-mime and
     update-mime-database, that is now handled by triggers. Closes: #684689
     Thanks, Charles Plessy
+  * python distutils buildsystem: Propigate failure of pyversions.
+    Closes: #683551 Thanks, Clint Byrum
 
  -- Joey Hess <joeyh@debian.org>  Thu, 05 Jul 2012 08:51:07 -0600
 
